# staffery

./: dataa.json  db.sqlite3  pyproject.toml
djangoProject/: settings.py  urls.py
staff/: forms.py  models.py  urls.py  views.py
staff/migrations/: 0001_initial.py  0002_rename_employment_date_employee_employed_at_and_more.py  0003_alter_employee_options_employee_created_at_and_more.py  0004_employee_root.py
templates/: base.html  home.html  menu.html  sort.html
