[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["genemators <itstoolongname@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
django-seed = "^0.3.1"
psycopg2-binary = "^2.9.3"
pylava = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
